--- a/NewsPortal/NewsPaper/templates/news_1.html
+++ b/NewsPortal/NewsPaper/templates/news_1.html
@@ -1,12 +1,15 @@
 <!--  наследуемся от шаблона default.html, который мы создавали для flatpages -->
 {% extends 'flatpages/default.html' %}
+{% load custom_filters %}!
 
 <!-- Название у нас будет Product -->
 {% block title %}
-Product
+{{ news_1.title }}
 {% endblock title %}
 
 <!-- В контенте на странице мы выводим сам товар, идентификатор которого был передан в url -->
 {% block content %}
-<h1>{{ news_1 }}</h1>
+<h1>{{ news_1.title|censor }}</h1>
+<p>Дата публикации: {{ news_1.created_at|date:"d.m.Y" }}</p>
+<p>{{ news_1.content|censor }}</p>
 {% endblock content %}
