--- a/NewsPortal/NewsPaper/templates/news.html
+++ b/NewsPortal/NewsPaper/templates/news.html
@@ -1,13 +1,23 @@
 <!-- наследуемся от шаблона default.html, который мы создавали для flatpages -->
 {% extends 'flatpages/default.html' %}
+{% load custom_filters %}!
 
 <!-- Название у нас будет products -->
 {% block title %}
-Products
+all news
 {% endblock title %}
 
 <!-- В контенте на странице мы выводим все товары -->
 {% block content %}
-<h1>Все товары</h1>
-{{ news }}
+<h1>Все новости</h1>
+<p>Количество новостей: {{news|length}}</p>
+<ul>
+    {% for post in news %}
+    <li>
+        <h2>{{ post.title|censor }}</h2>
+        <p>Дата публикации: {{ post.created_at|date:"d.m.Y" }}</p>
+        <p>{{ post.content|truncatewords:20|censor }}</p>
+    </li>
+    {% endfor %}
+</ul>
 {% endblock content %}
